--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,9 @@ services:
       - app-network
 
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.simple
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/todo?schema=public
       NEXTAUTH_URL: http://localhost:3003
@@ -29,7 +31,7 @@ services:
         condition: service_healthy
     ports:
       - "3003:3000"
-    command: sh -c "npx prisma migrate deploy && node server.js"
+    command: sh -c "npx prisma migrate deploy && npm start"
     networks:
       - app-network
 
