--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,11 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.simple
+      dockerfile: Dockerfile.ultra-simple
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/todo?schema=public
       NEXTAUTH_URL: http://localhost:3003
-      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET:-default-secret-key-change-me}
       BCRYPT_SALT_ROUNDS: 10
     depends_on:
       db:
