--- a/portainer-stack-working.yml
+++ b/portainer-stack-working.yml
@@ -18,13 +18,11 @@ services:
     networks:
       - todo-network
     restart: unless-stopped
-    labels:
-      - "traefik.enable=false"
 
   web:
     build:
       context: .
-      dockerfile: Dockerfile.portainer
+      dockerfile: Dockerfile.working
     container_name: todo-app-web
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public
@@ -37,20 +35,10 @@ services:
         condition: service_healthy
     ports:
       - "${APP_PORT}:3000"
-    command: sh -c "npx prisma migrate deploy && npm start"
+    command: sh -c "npx prisma migrate deploy && npx next start"
     networks:
       - todo-network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.todo-app.rule=Host(`${DOMAIN_NAME}`)"
-      - "traefik.http.services.todo-app.loadbalancer.server.port=3000"
 
 volumes:
   db_data:
