--- a/docker-compose.final.yml
+++ b/docker-compose.final.yml
@@ -22,7 +22,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.final
     container_name: todo-app-web
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public
