Update deployment instructions and environment configuration: Revise DEPLOYMENT.md to reflect changes in Supabase key retrieval, update env.example with new Supabase configuration variables, and modify package.json build script to include database URL generation.

--- a/env.example
+++ b/env.example
@@ -4,13 +4,26 @@
 # Kopieren Sie diese Datei zu .env und passen Sie die Werte an
 
 # ===========================================
-# DATENBANK-KONFIGURATION
+# SUPABASE KONFIGURATION
 # ===========================================
 
-# Supabase PostgreSQL Connection String
+# Supabase Project URL
+# Erhalten Sie diese aus Ihrem Supabase Dashboard → Settings → API
+SUPABASE_URL="https://your-project-ref.supabase.co"
+
+# Supabase Anon Public Key (für Client-seitige Operationen)
+SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.your-anon-key"
+
+# Supabase Service Role Secret (für Server-seitige Operationen mit Prisma)
+SUPABASE_SERVICE_ROLE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.your-service-role-key"
+
+# PostgreSQL Connection String (optional - wird automatisch aus Supabase-Keys generiert)
 # Format: postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres
-# Erhalten Sie diese URL aus Ihrem Supabase Dashboard → Settings → Database
+# Falls nicht gesetzt, wird die URL automatisch aus SUPABASE_URL generiert
 DATABASE_URL="postgresql://postgres:your-password@db.your-project-ref.supabase.co:5432/postgres"
+
+# Supabase Database Password (nur nötig wenn DATABASE_URL nicht gesetzt ist)
+SUPABASE_DB_PASSWORD="your-database-password"
 
 # ===========================================
 # NEXT-AUTH KONFIGURATION
@@ -61,6 +74,9 @@ N8N_OUTBOUND_TOKEN="your-n8n-webhook-token"
 
 # Für Produktion:
 # NEXTAUTH_URL="https://your-app-name.vercel.app"
+# SUPABASE_URL="https://your-project-ref.supabase.co"
+# SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.your-anon-key"
+# SUPABASE_SERVICE_ROLE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.your-service-role-key"
 # DATABASE_URL="postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres"
 # NEXTAUTH_SECRET="generated-secret-key"
 
@@ -70,9 +86,13 @@ N8N_OUTBOUND_TOKEN="your-n8n-webhook-token"
 # Für lokale Entwicklung mit Supabase:
 
 # 1. Erstellen Sie ein Supabase-Projekt
-# 2. Kopieren Sie die Connection String aus Settings → Database
-# 3. Generieren Sie einen NEXTAUTH_SECRET
-# 4. Starten Sie die App mit: npm run dev
+# 2. Kopieren Sie die Keys aus Settings → API:
+#    - Project URL → SUPABASE_URL
+#    - anon public → SUPABASE_ANON_KEY  
+#    - service_role secret → SUPABASE_SERVICE_ROLE_KEY
+# 3. Kopieren Sie die DATABASE_URL aus Settings → Database
+# 4. Generieren Sie einen NEXTAUTH_SECRET
+# 5. Starten Sie die App mit: npm run dev
 
 # ===========================================
 # DEPLOYMENT CHECKLIST
@@ -80,10 +100,17 @@ N8N_OUTBOUND_TOKEN="your-n8n-webhook-token"
 # Vor dem Deployment auf Vercel:
 
 # ✅ Supabase-Projekt erstellt
-# ✅ DATABASE_URL aus Supabase kopiert
+# ✅ Supabase-Keys aus Settings → API kopiert:
+#    - SUPABASE_URL
+#    - SUPABASE_ANON_KEY
+#    - SUPABASE_SERVICE_ROLE_KEY
+# ✅ DATABASE_URL aus Settings → Database kopiert
 # ✅ NEXTAUTH_SECRET generiert (openssl rand -base64 32)
 # ✅ Vercel-Projekt erstellt und GitHub-Repo verknüpft
 # ✅ Environment Variables in Vercel gesetzt:
+#    - SUPABASE_URL
+#    - SUPABASE_ANON_KEY
+#    - SUPABASE_SERVICE_ROLE_KEY
 #    - DATABASE_URL
 #    - NEXTAUTH_URL (wird automatisch von Vercel gesetzt)
 #    - NEXTAUTH_SECRET
