--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/generate-database-url.js && next build",
+    "build": "next build",
     "build:full": "prisma generate && prisma migrate deploy && npm run build",
     "start": "next start",
     "lint": "next lint",
@@ -29,7 +29,10 @@
     "lucide-react": "^0.294.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "@supabase/supabase-js": "^2.38.0"
+    "@supabase/supabase-js": "^2.38.0",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -37,11 +40,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/bcrypt": "^5.0.2",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "eslint-config-next": "14.0.4"
   },
   "engines": {
     "node": ">=18.0.0",
