--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/generate-database-url.js && next build",
     "build:full": "prisma generate && prisma migrate deploy && npm run build",
     "start": "next start",
     "lint": "next lint",
