Add setup-db script to package.json: Introduce a new command for setting up the Supabase database, enhancing project initialization and database management.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "generate-db-url": "node scripts/generate-database-url.js"
+    "generate-db-url": "node scripts/generate-database-url.js",
+    "setup-db": "node scripts/setup-supabase-database.js"
   },
   "dependencies": {
     "next": "14.0.4",
