Aktualisiere Umgebungsvariablen und verbessere Prioritätszuweisung im n8n Webhook: Ersetze das Status-Mapping durch eine erweiterte Version mit Prioritäten und passe die Logik zur Ableitung der Priorität basierend auf Listen-Namen an.

--- a/env.example
+++ b/env.example
@@ -59,7 +59,8 @@ BCRYPT_SALT_ROUNDS=10
 INBOUND_WEBHOOK_TOKEN="your-secure-webhook-token"
 
 # Mapping von Planka-Listen zu App-Status (JSON-Format)
-PLANKA_LIST_TO_STATUS='{"Offen":"offen","In Bearbeitung":"in_bearbeitung","Erledigt":"erledigt"}'
+# Priorität 1 = hohe Priorität, Priorität 2 = mittlere Priorität, Priorität 3 = niedrige Priorität
+PLANKA_LIST_TO_STATUS='{"Priorität 1":"in_bearbeitung","Priorität 2":"offen","Priorität 3":"offen","Erledigt":"erledigt","Offen":"offen","In Bearbeitung":"in_bearbeitung"}'
 
 # URL für ausgehende Webhooks an n8n
 N8N_OUTBOUND_WEBHOOK_URL="https://your-n8n-instance.com/webhook/todo-app"
