--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
     "enable-rls": "node scripts/enable-rls-security-supabase.js"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
     "@prisma/client": "^5.7.1",
-    "prisma": "^5.7.1",
-    "next-auth": "^4.24.5",
-    "bcrypt": "^5.1.1",
-    "zod": "^3.22.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@supabase/supabase-js": "^2.38.0",
-    "autoprefixer": "^10.0.1",
+    "next": "14.0.4",
     "postcss": "^8",
+    "prisma": "^5.7.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
-    "@types/bcrypt": "^5.0.2"
+    "uuid": "^13.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
