--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
   "functions": {
     "app/api/**/*.ts": {
       "maxDuration": 30
+    },
+    "app/api/events/route.ts": {
+      "maxDuration": 300
+    },
+    "app/api/test-sse/route.ts": {
+      "maxDuration": 300
     }
   },
   "env": {
